tests/should-fail/syntax/max-byte-in-rawcode.j
globals
    integer r = 'ﹽ'
endglobals
